--- a/package.json
+++ b/package.json
@@ -11,18 +11,15 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.2",
     "firebase": "^8.7.0",
-    "hamburger-react": "^2.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-strap": "^0.0.1",
     "react-toastify": "^7.0.4",
-    "sass": "^1.35.2",
-    "web-vitals": "^1.0.1"
+    "sass": "^1.35.2"
   },
   "scripts": {
     "start": "react-scripts start",
