--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-strap": "^0.0.1",
     "react-toastify": "^7.0.4",
     "sass": "^1.35.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
