--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-toastify": "^7.0.4",
+    "react-tooltip": "^4.2.21",
     "sass": "^1.35.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
